test_logs/base/experiment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: experiment
  namespace: testdomenico
  labels:
    app: experiment
spec:
  clusterIP: None
  clusterIPs:
    - None
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: experiment
  sessionAffinity: None
  type: ClusterIP
